--- a/english.org
+++ b/english.org
@@ -1,43 +1,45 @@
+#+STARTUP: showall indent hidestars
+
 * Grammar
 
 ** Как построить вопрос в английском языке?
 
-1. Определи время, в котором строишь вопрос
-2. Смысловой глагол есть?
-
-ДА!
-3. Определи вспомогательный глагол для этого времени(do, to be, have)
-4. Следуй схеме:
-Вспомогательный глагол -> подлежащее -> cмысловой глагол -> все остальное?
-
-Do you like read books?
-Have you been at school?
-Is it raining outside?
-
-Если есть вопросительное слово, оно пойдет в самое начало вопроса, а
-потом опять по старой схеме:
-
-Where have you been?
-How did you pass exam?
-
-
-Смыслового глагола НЕТ!
-
-Это значит, что в утвердительном предложении используется глагол только
-to be, поскольку предложение в без сказуемого построить нельзя.
-
-В этом случае наша схема незначительно меняется:
-
-Глагол to be -> подлежащее -> все остальное?
-
-Are you okay?
-Is it hot?
-Was you at home?
-
-Если есть вопросительное слово, оно просто уйдет в начало:
-
-What is your name?
-How old are you?
+Определи время, в котором строишь вопрос. Смысловой глагол есть?
+- Дa, смысловой глагол =есть=!
+  Определи вспомогательный глагол для этого времени(=do=, =to be=, =have=)
+  Следуй схеме:
+  - вспомогательный глагол
+  - подлежащее
+  - cмысловой глагол
+  - все остальное
+  #+BEGIN_EXAMPLE
+    Do you like read books?
+    Have you been at school?
+    Is it raining outside?
+  #+END_EXAMPLE
+  Если есть вопросительное слово, оно пойдет в самое начало вопроса, а
+  потом опять по старой схеме:
+  #+BEGIN_EXAMPLE
+    Where have you been?
+    How did you pass exam?
+  #+END_EXAMPLE
+- Нет, смыслового глагола =нет=!
+  Это значит, что в утвердительном предложении используется глагол только
+  =to be=, поскольку предложение в без сказуемого построить нельзя.
+  В этом случае наша схема незначительно меняется:
+  - Глагол to be
+  - подлежащее
+  - все остальное
+  #+BEGIN_EXAMPLE
+    Are you okay?
+    Is it hot?
+    Was you at home?
+  #+END_EXAMPLE
+  Если есть вопросительное слово, оно просто уйдет в начало:
+  #+BEGIN_EXAMPLE
+    What is your name?
+    How old are you?
+  #+END_EXAMPLE
 
 На этом премудрости построения вопроса заканчиваются. Компоненты
 всегда одни и те же, меняются только времена.
