--- a/english.org
+++ b/english.org
@@ -107,7 +107,7 @@ What is your name?
 
 Строится:
 - Смысловой глагол правильный?
-  - Да! Тогда к глаголу добавится =ed= (watch=ed=, help=ed= etc.)
+  - Да! Тогда к глаголу добавится =ed= (watched, helped etc.)
   - Нет! Тогда употребляем собственную вторую форму глагола: (see->sow, go->went etc.)
 
 Для построения отрицания или вопроса используется вспомогательный глагол =do=. Раз он
@@ -147,109 +147,45 @@ What is your name?
 временную нагрузку: станет was/were (were для множественного числа)
 
 Утверждение:
-I was watching the film.
+
+#+BEGIN_EXAMPLE
+  I was watching the film.
+#+END_EXAMPLE
 
 Вопрос:
-Was he watching the film?
+#+BEGIN_EXAMPLE
+  Was he watching the film?
+#+END_EXAMPLE
 
 Отрицание:
-They were not watching the film.
 
+#+BEGIN_EXAMPLE
+  They were not watching the film.
+#+END_EXAMPLE
 
 ** Present Perfect Simple
 
 Только миг между прошлым и будущим...
 
-В нашем случае, это миг между прошлым и настоящим.
-Действие произошло так недавно в прошлом, что имеет наипрямейшее
-отношение к настоящему.
+В нашем случае, это миг между прошлым и настоящим.  Действие произошло так недавно в
+прошлом, что имеет наипрямейшее отношение к настоящему.
 
-Строится: have/has + глагол в третьей форме
+Строится: =have/has= + =глагол в третьей форме=
 Если глагол правильный, к нему добавится ed, если нет - вспоминаем его
 третью форму.
 
-Причем тут has?!
+Причем тут =has=?!
 
-Все дело в том, что перфектов много. Нам как-то надо показать, что это
-именно present perfect, вот мы и оставили фишечку present simple: к
-вспомогаетльному глаголу в третьем лице единственном числе добавили
--s. Так получился has.
+Все дело в том, что перфектов много. Нам как-то надо показать, что это именно =present
+perfect=, вот мы и оставили фишечку =present simple=: к вспомогаетльному глаголу в
+третьем лице единственном числе добавили =-s=. Так получился =has=.
 
-- Where is my dog?
-- I have seen him in the garden.
+#+BEGIN_EXAMPLE
+  - Where is my dog?
+  - I have seen him in the garden.
+#+END_EXAMPLE
 
-- Has he watched this film?
-- No, he has not watched it.
-
-
-** Упраженения 1
-
-Past Simple
-
-Построить утвердительное, отрицательное и вопросительное
-предложение:
-
-1. I (to do) morning exercises.
-2. He (to work) at a factory.
-3. She (to sleep) after dinner.
-4. We (to work) part-time.
-5. They (to drink) tea every day.
-6. Mike (to be) a student.
-7. Helen (to have) a car.
-8. You (to be) a good friend.
-9. You (to be) good friends.
-10. It (to be) difficult to remember everything.
-
-Past Continuous
-Построить предлоежения в Past Continuous:
-
-1. Around me people (to talk) Russian, Italian and English.
-2. Arnold (to talk) to some of the other guests on the terrace when
-   Hardy came.
-3. Alex (to look) at his watch.
-4. All night long the stars (to glitter).
-5. Elizabeth (to eat) and didn’t raise her head.
-6. He drank some of the wine and ate several chunks of bread while he
-   (to wait) for his dinner to come up.
-7. The family (to prepare) for the party.
-8. She (to argue) that only Belinda knew how to treat men.
-9. A few minutes later Edward (to hurry) through the streets to his
-   bus stop.
-10. They moved across the room, which (to start) to fill up, to a
-    vacant corner.
-
-Present Perfect Simple
-
-
-1.  We just … (meet) an American actor.
-2.  Your husband … (sell) the house?
-3.  I … (not start) my new job yet.
-4   You … (be) to New York before?
-5    Ann … (not choose) the dessert yet.
-6    They … (do) the shopping today.
-7    Tom … ever (visit) Disneyland?
-8    I just … (see) a horror film.
-9    She … (not find) her coat.
-10    The cat already … (eat up) the fish.
-
-Present Simple или Present Continuous?
-
-1. Excuse me, … you … (know) where the post office is?
-
-2. I … (want) to eat a sandwich.
-
-3. … you … (go) to travel abroad next year?
-
-4. Where’s Bob? He … (listen) to music in his room.
-
-5. How often … you …. (go) for a walk in the park?
-
-6. My father … (read) magazines very often.
-
-7. What time … your mother … (finish) her job in the evening?
-
-8. She … (go) to the gym twice a week.
-
-9. Liza … usually … (drive) to work. She usually catches the bus.
-
-10. They … (do) their homework in the room.
+#+BEGIN_EXAMPLE
+  - Has he watched this film?
+  - No, he has not watched it.
+#+END_EXAMPLE
